--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -4,14 +4,22 @@
     transform: translateX(-50%);
 }
 
+.margin-top-medium {
+    margin-top: 4rem;
+}
+
 .margin-top-big {
     margin-top: 8rem;
 }
 
 .margin-top-ultimate {
-    margin-top: 30rem;
+    margin-top: 10rem;
 }
 
 .margin-bottom-big {
     margin-bottom: 20rem;
+}
+
+.margin-bottom-medium {
+    margin-bottom: 15rem;
 }
