--- a/css/style.css
+++ b/css/style.css
@@ -31,53 +31,105 @@ html {
   animation: moveInTop 2s; }
 
 .heading-secondary {
-  font-size: 6rem;
-  color: #2F2440;
-  position: absolute;
-  left: 50%;
-  top: 10%;
-  transform: translate(-50%, -10%); }
+  font-size: 5rem;
+  color: #fff;
+  margin: 0;
+  text-transform: uppercase; }
 
 .heading-tertiary {
-  margin-left: 2rem;
-  color: #fff;
-  font-size: 3rem; }
-  .heading-tertiary__aboutpar {
-    font-size: 1.8rem;
-    margin-left: 2rem;
-    margin-right: 2rem;
-    color: #333;
-    text-align: justify;
-    hyphens: initial; }
+  font-size: 1.5rem;
+  color: #2F2440; }
 
 .center-horizontal {
   position: absolute;
   left: 50%;
   transform: translateX(-50%); }
 
+.margin-top-medium {
+  margin-top: 4rem; }
+
 .margin-top-big {
   margin-top: 8rem; }
 
 .margin-top-ultimate {
-  margin-top: 30rem; }
+  margin-top: 10rem; }
 
 .margin-bottom-big {
   margin-bottom: 20rem; }
 
-.section-about {
-  height: 90vh;
-  width: 100%;
-  background-color: #f7f7f7;
+.margin-bottom-medium {
+  margin-bottom: 15rem; }
+
+.about {
+  background-image: linear-gradient(to right bottom, #ffb900, #ff7730);
+  height: 75vh;
+  padding-top: 11rem;
   margin-top: -11rem;
-  position: relative;
-  z-index: -1; }
-  .section-about__aboutdiv {
-    background-color: #C6B79B;
-    border-radius: 2%;
-    padding: 1rem;
-    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2); }
-    .section-about__aboutdiv:hover {
-      color: green; }
+  letter-spacing: .1rem; }
+  .about__text {
+    text-align: center;
+    letter-spacing: 2rem; }
+  .about__textbox {
+    background-color: #fff;
+    padding: 1.5rem;
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+    border-radius: 1%;
+    transition: ease-in-out .3s;
+    height: 20rem; }
+    .about__textbox:hover {
+      transform: scale(1.05); }
+    .about__textbox--headingthree {
+      margin-left: 2rem; }
+    .about__textbox--paragraph {
+      margin-left: 2rem;
+      margin-right: 2rem;
+      font-size: 1.2rem; }
+
+.projects {
+  background-image: linear-gradient(to right bottom, #BA0F30, #FF2511);
+  height: 85vh;
+  padding-top: 8rem;
+  margin-top: -8rem;
+  letter-spacing: .1rem; }
+  .projects__box {
+    background-color: purple; }
+
+.project-body {
+  background-image: linear-gradient(to right bottom, #ffb900, #ff7730);
+  height: 100vh;
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative; }
+
+.project {
+  background-image: url(../img/calc_overview.jpg);
+  width: 40%;
+  height: 40%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -70%);
+  background-size: cover;
+  background-repeat: no-repeat; }
+  .project:hover {
+    transform: scale(-1rem); }
+  .project__heading {
+    text-align: center;
+    font-size: 5rem;
+    color: #BA0F30; }
+
+.contact {
+  padding: 30rem 0;
+  position: relative; }
+
+.book {
+  background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url(../img/nat-10.jpg);
+  background-size: 100%;
+  border-radius: .3rem;
+  box-shadow: 0 1.5 4rem rgba(0, 0, 0, 0.2); }
+  .book__form {
+    width: 50%;
+    padding: 6rem; }
 
 .header {
   height: 95vh;
@@ -124,6 +176,158 @@ html {
   .row .col-3-of-4 {
     width: calc(3 * ((100% - 3 * 6rem) / 4) + 2 * 6rem); }
 
+.navigation__checkbox {
+  display: none; }
+
+.navigation__button {
+  background-color: #fff;
+  height: 7rem;
+  width: 7rem;
+  position: fixed;
+  top: 6rem;
+  right: 6rem;
+  border-radius: 50%;
+  z-index: 2000;
+  box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.1);
+  text-align: center;
+  cursor: pointer; }
+
+.navigation__background {
+  height: 6rem;
+  width: 6rem;
+  border-radius: 50%;
+  position: fixed;
+  top: 6.5rem;
+  right: 6.5rem;
+  background-image: radial-gradient(#C6B79B, #2F2440);
+  z-index: 1000;
+  transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1); }
+
+.navigation__nav {
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 1500;
+  opacity: 0;
+  width: 0;
+  transition: all 0.8s cubic-bezier(0.86, 0, 0.07, 1); }
+
+.navigation__list {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  list-style: none;
+  text-align: center;
+  width: 100%; }
+
+.navigation__item {
+  margin: 1rem; }
+
+.navigation__link:link, .navigation__link:visited {
+  font-size: 3rem;
+  padding: 1rem 2rem;
+  font-weight: 300;
+  color: #fff;
+  text-decoration: none;
+  text-transform: uppercase;
+  background-image: linear-gradient(120deg, transparent 0%, transparent 50%, #fff 50%);
+  background-size: 220%;
+  transition: all .4s;
+  display: inline-block; }
+  .navigation__link:link span, .navigation__link:visited span {
+    margin-right: 1.5rem;
+    display: inline-block; }
+
+.navigation__link:hover, .navigation__link:active {
+  background-position: 100%;
+  color: #BA0F30;
+  transform: translateX(1rem); }
+
+.navigation__checkbox:checked ~ .navigation__background {
+  transform: scale(80); }
+
+.navigation__checkbox:checked ~ .navigation__nav {
+  opacity: 1;
+  width: 100%; }
+
+.navigation__icon {
+  position: relative;
+  margin-top: 3.5rem; }
+  .navigation__icon, .navigation__icon::before, .navigation__icon::after {
+    width: 3rem;
+    height: 2px;
+    background-color: #333;
+    display: inline-block; }
+  .navigation__icon::before, .navigation__icon::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    transition: all .2s; }
+  .navigation__icon::before {
+    top: -.8rem; }
+  .navigation__icon::after {
+    top: .8rem; }
+
+.navigation__button:hover .navigation__icon::before {
+  top: -1rem; }
+
+.navigation__button:hover .navigation__icon::after {
+  top: 1rem; }
+
+.navigation__checkbox:checked + .navigation__button .navigation__icon {
+  background-color: transparent; }
+
+.navigation__checkbox:checked + .navigation__button .navigation__icon::before {
+  transform: rotate(135deg);
+  top: 0; }
+
+.navigation__checkbox:checked + .navigation__button .navigation__icon::after {
+  transform: rotate(-135deg);
+  top: 0; }
+
+.footer {
+  background-color: #333;
+  padding: 10rem 0 13rem 0;
+  font-size: 1.4rem;
+  color: #f7f7f7; }
+  .footer__logo-box {
+    text-align: center;
+    margin-bottom: 8rem; }
+  .footer__logo {
+    width: 15rem;
+    height: auto;
+    border-radius: 50%;
+    border: 2px solid white; }
+  .footer__navigation {
+    border-top: 0.1rem solid #999;
+    padding-top: 2rem;
+    display: inline-block; }
+  .footer__list {
+    list-style: none; }
+  .footer__item {
+    display: inline-block; }
+  .footer__link:link, .footer__link:visited {
+    color: #f7f7f7;
+    text-decoration: none;
+    text-transform: uppercase;
+    display: inline-block;
+    transition: all .2s;
+    background-color: #333; }
+    .footer__link:link:not(:last-child), .footer__link:visited:not(:last-child) {
+      margin-right: 1.5rem; }
+  .footer__link:hover, .footer__link:active {
+    color: #BA0F30;
+    text-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.4);
+    transform: rotate(5deg) scale(1.3); }
+  .footer__copyright {
+    border-top: 0.1rem solid #999;
+    padding-top: 2rem;
+    width: 80%;
+    float: right; }
+
 .btn, .btn:link, .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
@@ -160,3 +364,187 @@ html {
   left: 0;
   z-index: -1;
   transition: all .4s; }
+
+.nav {
+  position: fixed;
+  top: 10%;
+  right: 5%;
+  width: 5rem;
+  height: 5rem;
+  border-radius: 50%;
+  background-color: #fff;
+  text-align: center;
+  z-index: 2000; }
+
+.card {
+  perspective: 150rem;
+  -moz-perspective: 150rem;
+  position: relative;
+  height: 52rem; }
+  .card__side {
+    color: black;
+    font-size: 2rem;
+    height: 52rem;
+    transition: all 1.5s ease;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    backface-visibility: hidden;
+    border-radius: .3rem;
+    overflow: hidden;
+    box-shadow: 0 1.5rem 4rem black; }
+    .card__side--front {
+      background-color: #fff; }
+    .card__side--back {
+      transform: rotateY(180deg); }
+      .card__side--back-1 {
+        background-image: linear-gradient(to right bottom, #C6B79B, #2F2440); }
+      .card__side--back-2 {
+        background-image: linear-gradient(to right bottom, #C6B79B, #2F2440); }
+      .card__side--back-3 {
+        background-image: linear-gradient(to right bottom, #C6B79B, #2F2440); }
+  .card:hover .card__side--front {
+    transform: rotateY(-180deg); }
+  .card:hover .card__side--back {
+    transform: rotateY(0); }
+  .card__picture {
+    background-size: cover;
+    height: 23rem;
+    background-blend-mode: screen;
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    border-top-left-radius: .3rem;
+    border-top-right-radius: .3rem; }
+    .card__picture--1 {
+      background-image: linear-gradient(to right bottom, #ffb900, #ff7730), url(../img/calc_overview.jpg); }
+    .card__picture--2 {
+      background-image: linear-gradient(to right bottom, #ffb900, #ff7730), url(../img/radiogaga_overview.jpg); }
+    .card__picture--3 {
+      background-image: linear-gradient(to right bottom, #ffb900, #ff7730), url(../img/gameworld_overview.jpg); }
+  .card__heading {
+    font-size: 2.8rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    color: #fff;
+    position: absolute;
+    top: 12rem;
+    right: 2rem;
+    text-align: right;
+    width: 70%; }
+  .card__details {
+    padding: 3rem; }
+    .card__details ul {
+      list-style: none;
+      width: 75%; }
+      .card__details ul li {
+        text-align: center;
+        font-size: 1.5rem;
+        padding: 1rem; }
+        .card__details ul li:not(:last-child) {
+          border-bottom: 1px solid #eee; }
+  .card__cta {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 90%;
+    text-align: center; }
+  .card__price-box {
+    margin-bottom: 8rem;
+    color: #fff; }
+  .card__price-only {
+    font-size: 2.5rem;
+    text-transform: uppercase; }
+  .card__price-value {
+    font-size: 6rem;
+    font-weight: 100; }
+
+.bg-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+  opacity: .8;
+  overflow: hidden; }
+  .bg-video__content {
+    height: 100%;
+    width: 100%;
+    object-fit: cover; }
+
+.form__group:not(:last-child) {
+  margin-bottom: 2rem; }
+
+.form__input {
+  font-size: 1.5rem;
+  color: inherit;
+  font-family: inherit;
+  padding: 1.5rem 2rem;
+  border-radius: .2rem;
+  background-color: rgba(255, 255, 255, 0.5);
+  border: none;
+  border-bottom: .3rem solid transparent;
+  width: 80%;
+  display: block; }
+  .form__input:focus {
+    outline: none;
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
+    border-bottom: 0.3rem solid #BA0F30; }
+    .form__input:focus:invalid {
+      border-bottom: 0.3rem solid #ff7730; }
+  .form__input::-webkit-input-placeholder {
+    color: #999; }
+
+.form__input:placeholder-shown + .form__label {
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(-4rem); }
+
+.form__label {
+  font-size: 1.2rem;
+  font-weight: 700;
+  margin-left: 2rem;
+  margin-top: .7rem;
+  display: block;
+  transition: all .3s; }
+
+.form__radio-group {
+  width: 49%;
+  display: inline-block; }
+
+.form__radio-input {
+  display: none; }
+
+.form__radio-label {
+  font-size: 1.6rem;
+  cursor: pointer;
+  position: relative;
+  padding-left: 4.5rem; }
+
+.form__radio-button {
+  height: 3rem;
+  width: 3rem;
+  border: 0.5rem solid #BA0F30;
+  border-radius: 50%;
+  display: inline-block;
+  position: absolute;
+  left: 0;
+  top: -.4rem; }
+  .form__radio-button::after {
+    content: "";
+    display: block;
+    height: 1.3rem;
+    width: 1.3rem;
+    border-radius: 50%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #BA0F30;
+    opacity: 0;
+    transition: opacity .2s; }
+
+.form__radio-input:checked ~ .form__radio-label .form__radio-button::after {
+  opacity: 1; }
