--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,5 +13,11 @@
 
 @import "layout/header";
 @import "layout/grid";
+@import "layout/navigation";
+@import "layout/footer";
 
 @import "components/buttonmain";
+@import "components/navigation";
+@import "components/cards";
+@import "components/bgvideo";
+@import "components/form";
