--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,20 +1,106 @@
-.section-about {
-    height: 90vh;
-    width: 100%;
-    background-color: $color-grey-light-1;
+.about {
+    background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-light-1);
+    height: 75vh;
+    padding-top: 11rem;
     margin-top: -11rem;
-    position: relative;
-    z-index: -1;
+    letter-spacing: .1rem;
+    
+ 
+    &__text {
+        text-align: center;
+        letter-spacing: 2rem;
+    }
 
-    &__aboutdiv {
-        background-color: $color-primary-sand;
-        border-radius: 2%;
-        padding: 1rem;
+    &__textbox {
+        background-color: $color-white;
+        padding:1.5rem;
         box-shadow: 0 1rem 2rem rgba($color-black,.2);
-      
+        border-radius: 1%;
+        transition: ease-in-out .3s;
+        height: 20rem;
+        
         &:hover {
-            color: green;
+            transform: scale(1.05);
+            
         }
+
+        &--headingthree {
+            margin-left: 2rem;     
+        }
+
+        &--paragraph {
+            margin-left: 2rem;
+            margin-right: 2rem;
+            font-size: 1.2rem;
+        }
+    }
+}
+
+.projects {
+    background-image: linear-gradient(to right bottom, $color-primary-reddish, #FF2511);
+    height: 85vh;
+    padding-top: 8rem;
+    margin-top: -8rem;
+    letter-spacing: .1rem;
+
+    &__box {
+        background-color: purple;
+    }
+}
+
+.project-body {
+    background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-light-1);
+    height: 100vh;
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: relative;
+}
+
+.project {
+    background-image: url(../img/calc_overview.jpg);
+    width: 40%;
+    height: 40%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -70%);
+    background-size: cover;
+    background-repeat: no-repeat;
+
+    &:hover {
+      transform: scale(-1rem);
+    }
+    
+
+    &__heading {
+        text-align: center;
+        font-size: 5rem;
+        color: $color-primary-reddish;
+    }
+
+}
+
+.contact {
+    padding: 30rem 0;
+    position: relative;
+}
+
+.book {
+    background-image: linear-gradient(105deg,
+                rgba($color-white, .9)  0%, 
+                rgba($color-white, .9) 50%,
+        transparent 50%) ,
+        url(../img/nat-10.jpg);
+    background-size: 100%;
+    border-radius: .3rem;
+    box-shadow: 0 1.5 4rem rgba($color-black, .2);
+    
+
+
+
+    &__form {
+        width: 50%;
+        padding: 6rem;
     }
 }
 
