--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -16,6 +16,10 @@
     margin-top: 10rem;
 }
 
+.margin-top-extreme {
+    margin-top: 18rem;
+}
+
 .margin-bottom-big {
     margin-bottom: 20rem;
 }
