--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,9 @@ html {
 .margin-top-ultimate {
   margin-top: 10rem; }
 
+.margin-top-extreme {
+  margin-top: 18rem; }
+
 .margin-bottom-big {
   margin-bottom: 20rem; }
 
@@ -98,38 +101,149 @@ html {
   background-image: linear-gradient(to right bottom, #ffb900, #ff7730);
   height: 100vh;
   background-size: cover;
-  background-repeat: no-repeat;
-  position: relative; }
+  background-repeat: no-repeat; }
 
 .project {
-  background-image: url(../img/calc_overview.jpg);
+  background-color: black;
   width: 40%;
   height: 40%;
-  position: absolute;
+  position: relative;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -70%);
   background-size: cover;
   background-repeat: no-repeat; }
-  .project:hover {
-    transform: scale(-1rem); }
+  .project__img {
+    width: 100%;
+    height: 100%; }
   .project__heading {
     text-align: center;
     font-size: 5rem;
-    color: #BA0F30; }
+    font-weight: bolder;
+    color: #fff; }
+  .project__more {
+    position: absolute;
+    bottom: -100px;
+    right: 10px;
+    background-color: #BA0F30;
+    text-decoration: none;
+    padding: 2rem;
+    font-size: 2rem;
+    color: white; }
+    .project__more:hover {
+      background-color: black;
+      border-radius: 5%; }
 
 .contact {
   padding: 30rem 0;
   position: relative; }
 
 .book {
-  background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url(../img/nat-10.jpg);
-  background-size: 100%;
+  background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url(../img/scotland.jpg);
+  background-size: cover;
   border-radius: .3rem;
-  box-shadow: 0 1.5 4rem rgba(0, 0, 0, 0.2); }
+  box-shadow: 0 1.5 4rem rgba(0, 0, 0, 0.2);
+  height: 40rem; }
   .book__form {
     width: 50%;
-    padding: 6rem; }
+    padding: 1rem; }
+
+.description {
+  color: white;
+  font-size: 2rem;
+  margin-top: 30%;
+  position: fixed; }
+
+.detail-body {
+  background-image: linear-gradient(to right bottom, #BA0F30, #FF2511);
+  height: 85vh;
+  position: relative; }
+
+.return {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  padding: 2rem;
+  background-color: black; }
+  .return a {
+    color: white;
+    text-decoration: none; }
+
+.about-body {
+  background-image: linear-gradient(to right bottom, #BA0F30, #FF2511);
+  height: 100vh; }
+
+.aboutpage {
+  background-color: #fff;
+  border-radius: 1%;
+  box-shadow: 0 1.5 4rem rgba(0, 0, 0, 0.2);
+  height: 30rem;
+  text-align: center;
+  font-size: 1.5rem; }
+  .aboutpage__skilllist {
+    list-style: none;
+    text-align: center; }
+  .aboutpage__skillitem {
+    font-size: 1.5rem;
+    text-align: center;
+    margin-left: -3rem;
+    margin-bottom: 1rem; }
+
+.contact-body {
+  background-image: linear-gradient(#BA0F30, #2F2440);
+  height: 100vh; }
+
+.contacts {
+  background-image: linear-gradient(to right bottom, #ffb900, #ff7730);
+  height: 27.2rem;
+  padding: 1rem; }
+  .contacts__phone {
+    font-size: 4rem;
+    text-align: center; }
+
+.iconfb {
+  display: inline-block;
+  background-color: white;
+  border-radius: 10%;
+  margin-right: 3rem; }
+  .iconfb__logo-facebook {
+    font-size: 10rem;
+    color: #2a2a63;
+    transition: .2s; }
+    .iconfb__logo-facebook:hover {
+      transform: scale(1.2); }
+
+.iconig {
+  display: inline-block;
+  background-color: white;
+  border-radius: 10%;
+  margin-right: 3rem; }
+  .iconig__logo-instagram {
+    font-size: 10rem;
+    color: #e1306c;
+    transition: .2s; }
+    .iconig__logo-instagram:hover {
+      transform: scale(1.2); }
+
+.icontw {
+  display: inline-block;
+  background-color: white;
+  border-radius: 10%; }
+  .icontw__logo-twitter {
+    font-size: 10rem;
+    color: #38A1F3;
+    transition: .2s; }
+    .icontw__logo-twitter:hover {
+      transform: scale(1.2); }
+
+.iconalign {
+  text-align: center;
+  margin-top: 7rem; }
+
+.error {
+  color: red;
+  font-size: 2rem;
+  margin-bottom: 6rem; }
 
 .header {
   height: 95vh;
@@ -474,77 +588,64 @@ html {
     width: 100%;
     object-fit: cover; }
 
-.form__group:not(:last-child) {
-  margin-bottom: 2rem; }
-
-.form__input {
-  font-size: 1.5rem;
-  color: inherit;
-  font-family: inherit;
-  padding: 1.5rem 2rem;
-  border-radius: .2rem;
-  background-color: rgba(255, 255, 255, 0.5);
-  border: none;
-  border-bottom: .3rem solid transparent;
-  width: 80%;
-  display: block; }
-  .form__input:focus {
-    outline: none;
-    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
-    border-bottom: 0.3rem solid #BA0F30; }
-    .form__input:focus:invalid {
-      border-bottom: 0.3rem solid #ff7730; }
-  .form__input::-webkit-input-placeholder {
-    color: #999; }
-
-.form__input:placeholder-shown + .form__label {
-  opacity: 0;
-  visibility: hidden;
-  transform: translateY(-4rem); }
-
-.form__label {
-  font-size: 1.2rem;
-  font-weight: 700;
-  margin-left: 2rem;
-  margin-top: .7rem;
-  display: block;
-  transition: all .3s; }
-
-.form__radio-group {
-  width: 49%;
-  display: inline-block; }
-
-.form__radio-input {
-  display: none; }
-
-.form__radio-label {
-  font-size: 1.6rem;
-  cursor: pointer;
-  position: relative;
-  padding-left: 4.5rem; }
-
-.form__radio-button {
-  height: 3rem;
-  width: 3rem;
-  border: 0.5rem solid #BA0F30;
-  border-radius: 50%;
-  display: inline-block;
-  position: absolute;
-  left: 0;
-  top: -.4rem; }
-  .form__radio-button::after {
-    content: "";
-    display: block;
-    height: 1.3rem;
-    width: 1.3rem;
-    border-radius: 50%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #BA0F30;
+.form {
+  height: 40%; }
+  .form__group:not(:last-child) {
+    margin-bottom: 2rem; }
+  .form__input {
+    font-size: 1.5rem;
+    color: inherit;
+    font-family: inherit;
+    padding: 1.5rem 2rem;
+    border-radius: .2rem;
+    background-color: rgba(255, 255, 255, 0.5);
+    border: none;
+    border-bottom: .3rem solid transparent;
+    width: 65%;
+    display: block; }
+    .form__input:focus {
+      outline: none;
+      box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
+      border-bottom: .3rem solid green; }
+      .form__input:focus:invalid {
+        border-bottom: 0.3rem solid #FF2511; }
+    .form__input::-webkit-input-placeholder {
+      color: #999; }
+  .form__input:placeholder-shown + .form__label {
     opacity: 0;
-    transition: opacity .2s; }
+    visibility: hidden;
+    transform: translateY(-4rem); }
 
-.form__radio-input:checked ~ .form__radio-label .form__radio-button::after {
-  opacity: 1; }
+.composition {
+  position: relative;
+  width: 40%; }
+  .composition__photo {
+    width: 55%;
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
+    border-radius: .2rem;
+    position: absolute;
+    z-index: 10;
+    transition: all .2s;
+    outline-offset: 2rem; }
+    .composition__photo--p1 {
+      left: 0;
+      top: -2rem;
+      height: 400px;
+      width: 400px; }
+    .composition__photo--p2 {
+      right: -1rem;
+      top: 2rem;
+      height: 400px;
+      width: 400px; }
+    .composition__photo--p3 {
+      left: 20%;
+      top: 10rem;
+      height: 400px;
+      width: 400px; }
+    .composition__photo:hover {
+      outline: 1.5rem solid black;
+      transform: scale(1.05) translateY(-0.5rem);
+      box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.5);
+      z-index: 20; }
+  .composition:hover .composition__photo:not(:hover) {
+    transform: scale(0.95); }
