--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -1,4 +1,7 @@
 .form {
+
+    height: 40%;
+
     &__group:not(:last-child) {
         margin-bottom: 2rem;
     }
@@ -12,7 +15,7 @@
         background-color: rgba($color-white, .5);
         border: none;
         border-bottom: .3rem solid transparent;
-        width: 80%;
+        width: 65%;
         display: block;
 
    
@@ -20,10 +23,10 @@
         &:focus {
             outline: none;
             box-shadow: 0 1rem 2rem rgba($color-black, .1);
-            border-bottom: .3rem solid $color-primary-reddish;
+            border-bottom: .3rem solid green;
 
             &:invalid {
-                border-bottom: .3rem solid $color-secondary-light-1;
+                border-bottom: .3rem solid $color-primary-red;
             }
         }
 
@@ -41,63 +44,4 @@
         transform: translateY(-4rem);
     }
     
-
-    &__label {
-        font-size: 1.2rem;
-        font-weight: 700;
-        margin-left: 2rem;
-        margin-top: .7rem;
-        display: block;
-        transition: all .3s;
-    }
-
-    &__radio-group {
-        width: 49%;
-        display: inline-block;
-
-   
-    }
-
-    &__radio-input {
-        display: none;
-    }
-
-    &__radio-label {
-        font-size: 1.6rem;
-        cursor: pointer;
-        position: relative;
-        padding-left: 4.5rem;
-    }
-
-    &__radio-button {
-        height: 3rem;
-        width: 3rem;
-        border: .5rem solid $color-primary-reddish;
-        border-radius: 50%;
-        display: inline-block;
-        position: absolute;
-        left: 0;
-        top: -.4rem;
-    
-
-        &::after {
-            content: "";
-            display: block;
-            height: 1.3rem;
-            width: 1.3rem;
-            border-radius: 50%;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background-color: $color-primary-reddish;
-            opacity: 0;
-            transition: opacity .2s;
-        }
-
-    }
-
-    &__radio-input:checked ~ &__radio-label &__radio-button::after {
-        opacity: 1;
-    }
 }
