This is a branch for the intermediate assignment

--- a/includes/navigation.html
+++ b/includes/navigation.html
@@ -15,7 +15,9 @@
             <li class="navigation__item"><a href="about.php" class="navigation__link"><span>02</span> About</a></li>
             <li class="navigation__item"><a href="project.php" class="navigation__link"><span>03</span> My Projects</a></li>
             <li class="navigation__item"><a href="contact.php" class="navigation__link"><span>04</span> Contact</a></li>
-            <li class="navigation__item"><a href="" class="navigation__link"><span>05</span> Book now</a></li>
+        <form method="post">
+            <li class="navigation__item"><a href="login.php" name="logout" id="login" class="navigation__link"><span>05</span>Admin</a></li>
+        </form>
         </ul>
     </nav>
 </div>
