--- a/css/style.css
+++ b/css/style.css
@@ -245,6 +245,29 @@ html {
   font-size: 2rem;
   margin-bottom: 6rem; }
 
+.cms {
+  background-image: linear-gradient(#ffb900, #ff7730);
+  height: 50rem;
+  transition: all .2s;
+  box-shadow: 2rem 1.5rem 4rem rgba(255, 255, 255, 0.2); }
+  .cms:hover {
+    transform: translateY(0.5rem); }
+  .cms__heading {
+    font-size: 3rem;
+    text-align: center;
+    padding-top: 2rem; }
+  .cms__paragraph {
+    font-size: 2rem;
+    text-align: center; }
+  .cms__button {
+    margin-top: 20rem;
+    margin-left: 7rem; }
+    .cms__button:active {
+      visibility: hidden; }
+
+.admin-body {
+  background-color: black; }
+
 .header {
   height: 95vh;
   background-image: linear-gradient(to right bottom, rgba(47, 36, 64, 0.8), rgba(198, 183, 155, 0.8)), url(../img/header_bg.jpg);
@@ -649,3 +672,128 @@ html {
       z-index: 20; }
   .composition:hover .composition__photo:not(:hover) {
     transform: scale(0.95); }
+
+.inlog-body {
+  background-color: #2f2f2f;
+  margin: 0;
+  padding: 0; }
+
+.error {
+  color: maroon; }
+
+.login-body {
+  background-color: #2f2f2f;
+  margin: 0;
+  padding: 0; }
+
+.index-body {
+  background-color: #2f2f2f;
+  margin: 0;
+  padding: 0; }
+
+.form-group {
+  margin-bottom: 0px !important; }
+
+.container {
+  /* background-color: #9e9e9e; */
+  padding: 0;
+  margin-bottom: 50px;
+  border-top-left-radius: 25px;
+  border-top-right-radius: 25px;
+  border-bottom-left-radius: 25px;
+  border-bottom-right-radius: 25px; }
+
+.welcome-message {
+  margin-top: 100px;
+  margin-bottom: 20px;
+  text-align: center;
+  color: white;
+  font-family: helvetica;
+  font-weight: bold; }
+
+.welcome-body {
+  background-color: #2f2f2f; }
+
+table {
+  margin-left: auto;
+  margin-right: auto;
+  width: 400px; }
+
+.inlog-form input {
+  display: inline-block;
+  width: 300px;
+  border-radius: 25px; }
+
+.sign-up-button {
+  width: 150px;
+  border-radius: 25px;
+  background-color: black; }
+
+.sign-up-button:hover {
+  background-color: maroon; }
+
+.zipcode-a {
+  width: 200px !important; }
+
+.zipcode-b {
+  width: 100px !important; }
+
+label {
+  color: white;
+  font-family: helvetica;
+  font-size: 18px; }
+
+.register-bottom {
+  text-align: center;
+  background-color: white;
+  width: 500px;
+  margin-top: 20px;
+  border-bottom-left-radius: 25px;
+  border-bottom-right-radius: 25px;
+  margin-left: auto;
+  margin-right: auto; }
+
+.login-container {
+  width: 500px;
+  margin-left: auto;
+  margin-right: auto;
+  border-top-left-radius: 25px;
+  border-top-right-radius: 25px;
+  border-bottom-left-radius: 25px;
+  border-bottom-right-radius: 25px;
+  margin-top: 100px;
+  background-color: #9e9e9e; }
+
+.register-container {
+  background-color: #9e9e9e;
+  width: 500px;
+  margin-left: auto;
+  margin-right: auto;
+  border-top-left-radius: 25px;
+  border-top-right-radius: 25px;
+  border-bottom-left-radius: 25px;
+  border-bottom-right-radius: 25px; }
+
+.register-top {
+  text-align: center;
+  background-color: #732300;
+  width: 500px;
+  height: 80px;
+  font-family: helvetica;
+  margin-bottom: 20px;
+  color: white;
+  margin-left: auto;
+  margin-right: auto;
+  border-top-left-radius: 25px;
+  border-top-right-radius: 25px; }
+
+.register-top h1 {
+  font-size: 50px;
+  padding-top: 10px;
+  color: white; }
+
+.credentials-container {
+  width: 1200px;
+  height: 200px;
+  margin: 0 auto;
+  background-color: maroon; }
